# venturi

./: .gitignore  environment-dev.yaml  environment.yaml  pyproject.toml  readme.md  ruff.toml
config/: _default_schema.py  default.yaml
examples/: Config tutorial.ipynb  readme.md
examples/0_start_here/: Config tutorial.ipynb
examples/0_start_here/config/: vit_config.yaml
examples/basic_usage/: experiment.py  readme.md
examples/basic_usage/config/: base_config.yaml  custom_config.yaml
examples/basic_usage/results/: config.yaml  metrics.csv  training_time.txt
examples/config_tutorial/: Config tutorial.ipynb
examples/hyperparameter_search/: experiment.py  readme.md
tests/: conftest.py  readme.md  test_config.py
tests/unit/: test_callbacks.py  test_config.py  test_data_module.py  test_experiment.py  test_instantiate.py  test_loss_collection.py  test_training_module.py  test_utils.py
torchtrainer/: _util.py  config.py  core.py
torchtrainer/analysis/: inspector.py  profiling.py  util.py
torchtrainer/data/: data_util.py  img_util.py  oxford_pets.py  reference_dataset.py  vessel.py  vessel_base.py
torchtrainer/engine/: _train_old.py  composite.py  config.py  lightning_util.py  metrics.py  optimize.py  test.py  test_util.py  train_lightning.py  train_util.py
torchtrainer/metrics/: confusion_metrics.py  distance_metrics.py  losses.py  post_processing.py  topology_metrics.py
torchtrainer/models/: module_util.py  simple_encoder_decoder.py  unet_custom.py
venturi/: __init__.py  _util.py  base_config.yaml  config.py  core.py  util.py
(+36 files in other folders)
