[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "venturi"
version = "0.5"
authors = [
  { name="Cesar Comin"},
]
description = "A hackable blueprint for training neural networks using PyTorch and Lightning."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/chcomin/venturi"

[tool.setuptools]
packages = ["venturi"]

[project.scripts]
venturi = venturi.config:create_project"

[tool.setuptools.package-data]
my_package = ["base_config.yaml"]